<resources>
    <string name="app_name">MyShope</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="know_more">Know More</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="free">Free</string>
    <string name="order_total">Order Total</string>
    <string name="rupee">₹</string>
    <string name="emi_available">EMI Available</string>
    <string name="details">Details</string>
    <string name="rupees">₹</string>
    <string name="view_details">View Details</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="convenience">Convenience</string>
    <string name="ruppe">₹</string>
    <string name="order_amounts">Order Amounts</string>
    <string name="order_payment_details">Order Payment Details</string>
    <string name="select">Select</string>
    <string name="apply_coupons">Apply Coupons</string>
    <string name="_10_may_2xxx">10 May 2XXX</string>
    <string name="delivery_by">Delivery by</string>
    <string name="qty">Qty</string>
    <string name="size">Size</string>
    <string name="des">des</string>
    <string name="tittel">Tittel</string>
    <string name="order_now">Order Now</string>
    <string name="my_orders_details">My Orders Details</string>
    <string name="profile">Profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="_52_082_iteams">52,082+ Iteams</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="women_printed_kurta">Women Printed Kurta</string>
    <string name="neque_porro_quisquam_est_qui">Neque porro quisquam est qui</string>
    <string name="_1500">₹1500</string>
    <string name="total_order_1">Total Order (1) :</string>
    <string name="_15001">₹1500</string>
</resources>