<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".RazorPayActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/orderNowToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/backOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/backvecot"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/order_now"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/productItemLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderNowToolbar"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:backgroundTint="#FFD600"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/cartImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/proimg"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productTittleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tittel"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/productDesTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/des"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/size"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/size"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/sizeSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/size"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/qty"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/qtySpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_by"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/_10_may_2xxx"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/couponsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/productItemLinearLayout"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/coupon"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/apply_coupons"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="90dp"
            android:text="@string/select"
            android:textColor="#DD2C00"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/lineTextView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/couponsLinearLayout"
        android:layout_marginTop="50dp"
        android:background="#CACACA" />

    <TextView
        android:id="@+id/orderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineTextView"
        android:layout_marginTop="50dp"
        android:text="@string/order_payment_details"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/AmountsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderTextView"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_amounts"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:text="@string/ruppe"
            android:textSize="18sp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/convenienceLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AmountsLinearLayout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convenience"
            android:textSize="16sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/know_more"
            android:textColor="#DD2C00"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/apply_coupon"
            android:textColor="#DD2C00"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/deliveryLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/convenienceLinearLayout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_fee"
            android:textSize="14sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:text="@string/free"
            android:textColor="#DD2C00"

            />

    </LinearLayout>

    <TextView
        android:id="@+id/lineTextView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/deliveryLinearLayout"
        android:layout_marginTop="50dp"
        android:background="#CACACA" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineTextView2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/priceTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:text="@string/rupee"
            android:textSize="18sp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/EMILinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalLinearLayout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emi_available"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/details"
            android:textColor="#DD2C00"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/priceTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupees"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_details"
                android:textColor="#DD2C00" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceedBtn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/payment"
            android:text="@string/proceed_to_payment"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>