<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:backgroundTint="#FFD600"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/orderImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/proimg"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/orderTittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/women_printed_kurta"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/orderDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/neque_porro_quisquam_est_qui"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/orderPriceTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/_1500"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressBackgroundTint="#EDB310"
                    android:stepSize="0.1" />


            </LinearLayout>

        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#CACACA" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_order_1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/orderPriceTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="190dp"
                    android:text="@string/_15001"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>